# messcv

./: CMakeLists.txt  README.md  calibration  config.json  package.xml  raspicamstills
json/: calibration.json  config.json  remote.json
launch/: messcv_onboard_stills.launch  messcv_onboard_threat.launch  messcv_remote_threat.launch
scripts/: calibration  mapper  raspicamstills  stills  threat  threatfield
scripts/onboard/: calibration  raspicam_stills  transfer2threat
scripts/remote/: calibration  threat
